--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,28 @@
 {
   "compilerOptions": {
-    "jsx": "react",
     "target": "es5",
-    "module": "commonjs",
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "baseUrl": ".",
-    "paths": {
-      "Src/*": ["src"],
-      "Components/*": ["src/components/*"],
-      "Constants/*": ["src/constants/*"],
-      "Hooks/*": ["src/hooks/*"],
-      "Images/*": ["src/images/*"],
-      "Layouts/*": ["src/layouts/*"],
-      "Pages/*": ["src/pages/*"],
-      "Posts/*": ["src/posts/*"],
-      "Stores/*": ["src/stores/*"],
-      "Styles/*": ["src/styles/*"],
-      "Templates/*": ["src/templates/*"],
-      "Types/*": ["src/types/*"],
-      "Utils/*": ["src/utils/*"]
-    },
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "paths": {
+      "@/*": ["./*"]
+    }
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
