--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/typography": "^0.5.9"
   },
   "dependencies": {
+    "next": "13.2.1",
     "react-icons": "^4.9.0",
     "tailwind-pdf-viewer": "^0.1.5"
   }
